--- a/localization/english/replace/maus_stuffaroony_l_english.yml
+++ b/localization/english/replace/maus_stuffaroony_l_english.yml
@@ -7,3 +7,35 @@ americanist_add_detroit_decision: "Sanctify Detroit"
 americanist_add_detroit_decision_desc: "Detroit is a vital location in the history of the America, and within Americanist mythology. Yet, the location is not currently a popular destination for pilgrims due to the dominating spiritual and political power of the city. By returning Detroit to American control, we can make the city once again welcoming to Americans abound."
 americanist_add_detroit_decision_tooltip: "Make Detroit a [holy_site|E] for your [faith|E]"
 americanist_add_detroit_decision_confirm: "Enlighten Detroit!"
+
+ unite_illinois_decision:0 "Unite Illinois"
+ unite_illinois_decision_desc:0 "Let us unite the shattered old realm of Illinois!"
+ funite_illinois_decision_tooltip:0 "Unite the Kingdom of Illinois"
+ unite_illinois_decision_effect_tooltip:0 "The Kingdom of Indiana is united"
+ unite_illinois_decision_confirm:0 "The old brought forth anew."
+ illinois_reforged.t:0 "The Kingdom of Illinois"
+ illinois_reforged.desc:0 "Amidst the diverse and enchanting landscapes of Illinois, a momentous union unfolds as the once-separate realms of Chicagoland and Illinois coalesce under a shared banner. From the urban core of Chicago to the vibrant streets of Springfield, the resilient people of this land now stand united in allegiance to [ROOT.Char.GetName].\n\nMay the Kingdom of Illinois rise as a beacon of strength and prosperity, and may its inhabitants flourish under the wise rule of a just sovereign. Together, the people of Illinois embrace the promise of a radiant future, where the tapestry of cultures and communities intertwines, crafting a harmonious narrative of resilience and progress."
+ illinois_reforged.a:0 "At the crossroads of history, all is possible. Unite Illinois!"
+ illinois_reforged.b:0 "At the crossroads of industry, all is possible. Separate but Together!"
+ unite_illinois_decision_tt:0 "You [hold|E] at least #Z [SCOPE.ScriptValue('ate_formable_target_percent_decimal_value_tooltip')|0]%#! of [counties|E] in the [GetGeographicalRegion('custom_illinois').GetName] [region|E] (Current: [SCOPE.ScriptValue('ate_formable_illinois_percent_value')|0]%)\n"
+ custom_illinois:0 "Illinois"
+
+ expand_the_steelbelt_decision:0 "Expand the Steelbelt"
+ expand_the_steelbelt_decision_desc:0 "The Steelbelt was once far more expansive than its present De jure borders suggest. In the immediate aftermath of [the_event_ate|E], the Unions united to form a nation stretching from Minneapolis to Pittsburgh. It was this collective and their nascent country that rescued the Steelbelt from total collapse, steering it away from the brink of anarchy and ruin. Yet, over time, this vast empire fractured, and the Northwestern territories slipped from its influence entire. Now, having reclaimed sovereignty over these lands, we proudly proclaim their return as integral parts of the Empire of the Steelbelt!"
+ expand_the_steelbelt_decision_tooltip:0 "Establish sovereignty over the Northwest once again!"
+ expand_the_steelbelt_decision_confirm:0 "We forge our own fate with Minnesotan Steel!"
+ restore_the_steelbelt_decision_tooltip_primary_titles:0 "Your [primary_title|E] is one of:\n[GetTitleByKey('k_ohio_valley').GetName]\n[GetTitleByKey('k_ohio').GetName]\n[GetTitleByKey('k_greater_reserve').GetName]\n[GetTitleByKey('k_indiana').GetName]\n[GetTitleByKey('k_chicagoland').GetName]\n[GetTitleByKey('k_illinois').GetName]\n[GetTitleByKey('k_michigan').GetName]\n[GetTitleByKey('e_steel_belt').GetName]"
+ steelbelt_formed.t:0 "Steelfolk of the Great Lakes"
+ steelbelt_formed.desc:0 "The peoples of the Steelbelt are once again united as one people.\n\nBy establishing dominion over the old boundaries of the Empire of the Steelbelt, I have declared a new authority over the American Great Lakes. We are now one empire, united under my banner, and the stability I have brought will surely last generations to come.\n\nUnder one flag, the Steelbelt will live up to its name and bring prosperity and power to my entire empire."
+ steelbelt_formed.a:0 "We shall live our lives without the fear of death!"
+
+ restore_the_great_lakes_decision:0 "Unite the Great Lakes"
+ restore_the_great_lakes_decision_desc:0 "The American Great Lakes were once the beating heart of the Americas, and some say, the world. Their mighty waters fueled the machines and titans of Old America, channeling commerce deep into the continent’s core. Never before had all five lakes been united beneath a single banner. Now that we have established our sovereignty over them, we may declare the [GetTitleByKey('e_great_lakes').GetName] born under our banner!"
+ restore_the_great_lakes_decision_desc_native:0 "One of the most significant Pan-Indian unions was formed around these lakes to resist the encroachment of the old United States. Now that our people are truly sovereign around the Five Sisters once more, we may declare the Confederation of Tecumsia, in honor of that great leader of ages past!"
+ restore_the_great_lakes_decision_tooltip:0 "Establish independent rule around the Great Lakes"
+ restore_the_great_lakes_decision_confirm:0 "We forge our own fate!"
+ restore_the_great_lakes_decision_tooltip_primary_titles:0 "Your [primary_title|E] is one of:\n[GetTitleByKey('k_ohio_valley').GetName]\n[GetTitleByKey('k_ohio').GetName]\n[GetTitleByKey('k_greater_reserve').GetName]\n[GetTitleByKey('k_indiana').GetName]\n[GetTitleByKey('k_chicagoland').GetName]\n[GetTitleByKey('k_illinois').GetName]\n[GetTitleByKey('k_michigan').GetName]\n[GetTitleByKey('k_wisconsin').GetName]\n[GetTitleByKey('k_superior').GetName]\n[GetTitleByKey('k_north_star').GetName]\n[GetTitleByKey('k_aurora').GetName]\n[GetTitleByKey('k_ontario').GetName]\n[GetTitleByKey('k_hudsonia').GetName]\n[GetTitleByKey('e_steel_belt').GetName]\n[GetTitleByKey('e_northwoods').GetName]"
+ great_lakes_formed.t:0 "Great People of the Great Lakes"
+ great_lakes_formed.desc:0 "All five of the Great Lakes stand united as one people for the first time in history.\n\nBy establishing dominion over the the lands surounding the five Great Lakes, I have declared a new authority over the lakes themselves. We are now one empire, united under my banner, and the stability I have brought will surely last generations to come.\n\nUnder one ordinance, the Great Lakes will live up to their name and bring prosperity and power to my entire empire."
+ great_lakes_formed.desc.native:0 "Tecumseh's dream has been realized at last.\n\nOur people's heritage as the original inhabitants of this land has suffered through the encroaghment of the Old American Empire. In ages past, wars were fought over this land, that they called the Northwest Territory. Many men fought and died for their people's independence, only to fall to American arms.\n\nToday, their spirits rest soundly at last, as the Confederation of Tecumsia stands triumphant over the banners of those who suppressed it centuries ago. In honor of that great leader, and for all our descendants, we lay down our arms today in victory."
+ great_lakes_formed.a:0 "We shall live our lives without the fear of death!"
