--- a/localization/english/replace/maus_stuffaroony_l_english.yml
+++ b/localization/english/replace/maus_stuffaroony_l_english.yml
@@ -39,3 +39,15 @@ americanist_add_detroit_decision_confirm: "Enlighten Detroit!"
  great_lakes_formed.desc:0 "All five of the Great Lakes stand united as one people for the first time in history.\n\nBy establishing dominion over the the lands surounding the five Great Lakes, I have declared a new authority over the lakes themselves. We are now one empire, united under my banner, and the stability I have brought will surely last generations to come.\n\nUnder one ordinance, the Great Lakes will live up to their name and bring prosperity and power to my entire empire."
  great_lakes_formed.desc.native:0 "Tecumseh's dream has been realized at last.\n\nOur people's heritage as the original inhabitants of this land has suffered through the encroaghment of the Old American Empire. In ages past, wars were fought over this land, that they called the Northwest Territory. Many men fought and died for their people's independence, only to fall to American arms.\n\nToday, their spirits rest soundly at last, as the Confederation of Tecumsia stands triumphant over the banners of those who suppressed it centuries ago. In honor of that great leader, and for all our descendants, we lay down our arms today in victory."
  great_lakes_formed.a:0 "We shall live our lives without the fear of death!"
+
+ decision_reunify_steelbelter:0 "Restore a Unified Steelbelter Identity"
+ decision_reunify_steelbelter_desc:0 "Since the aftermath of [the_event_ate|E], the peoples of the Steelbelt have drifted increasingly far apart. What was once a unified identity has splintered, so much so that neighbors now regard each other as foreigners, even enemies. Their separation is so extreme that they no longer speak the same language! If we wish to forge a truly unified Steelbelt state, this fragmentation must be reversed. After years of tireless effort and careful planning, we believe the time has come to reforge a reunified Steelbelter identity!"
+ decision_reunify_steelbelter_tooltip:0 "We are the people of the Steelbelt."
+ decision_reunify_steelbelter_confirm:0 "We are Steelbelters."
+ decision_reunify_steelbelter_get_innovations:0 "The [steelbelter_culture.GetName] [culture|E] gains all [innovations|E] researched by any Lakelander or Northlaker [culture|E]"
+ decision_reunify_steelbelter_characters_custom:0 "All Lakelander or Northlaker [heritage|E] [characters|e]"
+ decision_reunify_steelbelter_county_custom:0 "All Lakelander or Northlaker [heritage|E] [counties|e]"
+ decision_reunify_steelbelter_own_all_steelbelter_provinces:0 "You must own all Lakelander or Northlaker [heritage|E] [counties|e] in the [GetGeographicalRegion('custom_region_anglo_french_na').GetName] [region|E]"
+ special_nie_extra:0 "the Greater [numenorean|E] Colonies"
+
+custom_region_anglo_french_na:0 "Anglo-French North America"
