Updated to 1.17 and new ATE Updates

--- a/localization/english/replace/culture/ate_culture_cultures_l_english.yml
+++ b/localization/english/replace/culture/ate_culture_cultures_l_english.yml
@@ -210,9 +210,9 @@
  ate_african_collective_noun:0 "African"
  ate_african_prefix:0 "African"
 
- ate_spanish:0 "Viejo Español"
- ate_spanish_collective_noun:0 "Viejo Español"
- ate_spanish_prefix:0 "Viejo Español"
+ ate_spanish:0 "Español Viejo"
+ ate_spanish_collective_noun:0 "Español Viejo"
+ ate_spanish_prefix:0 "Español Viejo"
 
  ate_caribeno:0 "Caribeño"
  ate_caribeno_collective_noun:0 "Caribeño"
@@ -235,9 +235,9 @@
  ate_centralamericano:0 "Centroamericano"
  ate_centralamericano_collective_noun:0 "Centroamericano"
  ate_centralamericano_prefix:0 "Centroamericano"
- ate_viejomexicano:0 "Viejo Mexicano"
- ate_viejomexicano_collective_noun:0 "Viejo Mexicano"
- ate_viejomexicano_prefix:0 "Viejo Mexicano"
+ ate_viejomexicano:0 "Mexicano Viejo"
+ ate_viejomexicano_collective_noun:0 "Mexicano Viejo"
+ ate_viejomexicano_prefix:0 "Mexicano Viejo"
  ate_mexicano:0 "Mexicano"
  ate_mexicano_collective_noun:0 "Mexicano"
  ate_mexicano_prefix:0 "Mexicano"
@@ -250,15 +250,15 @@
  ate_amazonico:0 "Amazonico"
  ate_amazonico_collective_noun:0 "Amazonico"
  ate_amazonico_prefix:0 "Amazonico"
- ate_viehoadino:0 "Viejo Andino"
- ate_viehoadino_collective_noun:0 "Viejo Andino"
- ate_viehoadino_prefix:0 "Viejo Andino"
+ ate_viehoadino:0 "Andino Viejo"
+ ate_viehoadino_collective_noun:0 "Andino Viejo"
+ ate_viehoadino_prefix:0 "Andino Viejo"
  ate_peruano:0 "Peruano"
  ate_peruano_collective_noun:0 "Peruano"
  ate_peruano_prefix:0 "Peruano"
- ate_viejoplatense:0 "Viejo Platense"
- ate_viejoplatense_collective_noun:0 "Viejo Platense"
- ate_viejoplatense_prefix:0 "Viejo Platense"
+ ate_viejoplatense:0 "Platense Viejo"
+ ate_viejoplatense_collective_noun:0 "Platense Viejo"
+ ate_viejoplatense_prefix:0 "Platense Viejo"
  ate_chileno:0 "Chileno"
  ate_chileno_collective_noun:0 "Chileno"
  ate_chileno_prefix:0 "Chileno"
